<resources>
    <string name="app_name">Detective Game</string>


    <string name="debug_upload_contacts">Einstellungen</string>
    <string name="button_contact_abbot">Kommissar kontaktieren</string>
    <string name="debug_safety_mode">Sicherheitsmodus</string>
    <string name="error_no_registration_or_safety_mode">App ist im Sicherheitsmodus oder Nutzer ist unregistriert</string>
    <string name="fcm_message">Der Kommissar hat eine neue Aufgabe</string>
    <string name="tab_text_1">Aufgaben</string>
    <string name="title_activity_settings">Einstellungen</string>


    <!-- Keys-->
    <string name="key_settings_reset">reset_server</string>
    <string name="key_settings_steal">steal_stuff</string>
    <string name="key_settings_url">server_url</string>

    <string name="key_settings_safety_mode">key_safety_mode</string>
    <string name="key_change_number">key_change_number</string>


    <!-- Preferences -->
    <string name="title_settings_debug">Entwicklereinstellungen</string>
    <string name="title_settings_general">Allgemeine Einstellungen</string>

    <string name="server_url">Server URL</string>
    <string name="change_number">Deine Handynummer</string>

    <string name="settings_reset">Zurücksetzen</string>
    <string name="settings_reset_desc">Ruft den "reset" endpoint des Servers auf</string>
    <string name="settings_steal">Daten stehlen</string>
    <string name="settings_steal_desc">Debug Button zum stehlen von Daten</string>

    <!-- Task Execution -->
    <string name="task_is_executing">Eine andere Aufgabe wird gerade bearbeitet.</string>
    <string name="task_success">Aufgabe erfolgreich erfüllt</string>
    <string name="task_permission_failed">Aufgabe kann ohne Android Erlaubnis nicht erfüllt werden</string>
    <string name="task_upload_failed">Kein Internet, bitte versuche es später noch einmal</string>
    <string name="task_upload_failed_safety">Der Sicherheitsmodus verhindet, dass Daten gesendet werden</string>
    <string name="task_data_failed">Aufgabe ist nicht erfüllt.</string>
    <string name="gps_not_enabled">GPS ist nicht aktiv. Bitte aktivieren und nochmal versuchen.</string>

    <string name="permission_dialog_explanation">Erlaubnis erteilen?</string>
    <string name="permissions_dialog_yes">Ja</string>
    <string name="permissions_dialog_no">Nein</string>

    <string name="fake_contact_permission_failed">Bitte erlaube den Zugriff auf die nötigen Daten</string>
    <string name="fake_contact_upload_failed">Keine Netzwerkverbindung, bitte versuch es es noch einmal</string>
    <string name="fake_contact_dialog_explanation">Wir können Kommissar Rex nur deinem Kontaktbuch hinzufügen wenn wir Zugriff auf deine Kontakte haben.</string>

    <!-- Firebase -->
    <string name="notification_new">Der Kommisar hat eine neue Aufgabe für dich.</string>
    <string name="notification_new_detail">Öffne die App um sie zu sehen</string>
</resources>
