<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/title_settings_general">
        <EditTextPreference
            app:key="@string/key_settings_url"
            app:title="@string/server_url"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="@string/key_settings_safety_mode"
            app:title="@string/debug_safety_mode" />

        <EditTextPreference
            app:title="@string/change_number"
            app:key="@string/key_change_number" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_settings_debug">
        <Preference
            app:key="@string/key_settings_steal"
            app:summary="@string/settings_steal_desc"
            app:title="@string/settings_steal" />

        <Preference
            app:key="@string/key_settings_reset"
            app:summary="@string/settings_reset_desc"
            app:title="@string/settings_reset" />
    </PreferenceCategory>
</PreferenceScreen>
