<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/button_temporary_telegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_contact_abbot" />

        <Button
            android:id="@+id/button_debug_steal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_upload_contacts" />

        <Switch
            android:id="@+id/switch_safety"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/debug_safety_mode" />


    </LinearLayout>

</FrameLayout>